--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d deploy"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b deploy"
   },
   "dependencies": {
     "gatsby": "^5.12.3",
