--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public -b deploy"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "gatsby": "^5.12.3",
+    "gatsby-plugin-postcss": "^6.13.1",
+    "gatsby-plugin-typescript": "^5.13.1",
+    "postcss": "^8.4.39",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
-    "@types/node": "^20.3.3",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "gh-pages": "^6.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.5.2"
   }
 }
