--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "gatsby": "^5.12.3",
     "gatsby-plugin-postcss": "^6.13.1",
