--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,12 @@ jobs:
         GATSBY_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.GATSBY_FIREBASE_MESSAGING_SENDER_ID }}
         GATSBY_FIREBASE_APP_ID: ${{ secrets.GATSBY_FIREBASE_APP_ID }}
       run: npm run build
-          
+       
+    - name: Test env
+      env:
+        GATSBY_FIREBASE_PROJECT_ID: ${{ secrets.GATSBY_FIREBASE_PROJECT_ID }}
+      run: | 
+        echo $GATSBY_FIREBASE_PROJECT_ID
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
