--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       env:
         GATSBY_FIREBASE_PROJECT_ID: ${{ secrets.GATSBY_FIREBASE_PROJECT_ID }}
       run: | 
-        echo ${{ secrets.GATSBY_FIREBASE_PROJECT_ID }}
+        echo "GATSBY_FIREBASE_PROJECT_ID=${{ secrets.GATSBY_FIREBASE_PROJECT_ID }}"
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
